# supervised-state-machines

./: CHANGELOG.md  README.md  supervised-state-machines.cabal
app/: Main.hs
src/: Codec.hs  EventLoop.hs  StateMachine.hs  Supervisor.hs
src/Example/: KeyValueStore.hs
test/: Main.hs
