cabal-version:      2.4
name:               supervised-state-machines
version:            0.0.0
synopsis:
  An experiment in implementing Erlang-style supervisor trees on a single thread.

description:
  See README at <https://github.com/stevana/supervised-state-machines#readme>

bug-reports:        https://github.com/stevana/supervised-state-machines/issues
license:            BSD-2-Clause
author:             Stevan Andjelkovic
maintainer:         stevana@users.noreply.github.com
copyright:          Copyright (c) 2023, Stevan Andjelkovic
category:           Concurrency, Distributed Computing
extra-source-files:
  CHANGELOG.md
  LICENSE

library
  exposed-modules:
    Codec
    EventLoop
    Example.KeyValueStore
    StateMachine
    Supervisor

  build-depends:
    , async
    , base        ^>=4.15.1.0
    , bytestring
    , containers
    , deepseq
    , stm

  hs-source-dirs:   src
  default-language: Haskell2010

executable kv
  main-is:          Main.hs
  build-depends:
    , base                       ^>=4.15.1.0
    , stm
    , supervised-state-machines

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , supervised-state-machines
